@@ -1,3 +1,8 @@
+2016-11-23  Enrico Schumann  <es@enricoschumann.net>
+
+	* R/functions.R (pr_abbr): add outline of
+	function 'pr_abbr' ("pretty abbreviate")
+
 2016-10-17  Enrico Schumann  <es@enricoschumann.net>
 
 	* NAMESPACE: import `utils::capture.output`
